<resources>
    <string name="app_name">Moda Mula</string>
    <string name="app_name_uppercase">MODA MULA</string>

    <!--''''''''''''''''''''SPLASH''''''''''''''''''''''''''''''''''-->
    <string name="int_connect_ok">Internet Bağlantısı Var</string>
    <string name="int_connect_not">Internet Bağlantısı Yok</string>
    <string name="accept_button">Alışverişe Başla</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--''''''''''''''''''''SPLASH''''''''''''''''''''''''''''''''''-->


    <!--''''''''''''''''''''HOME''''''''''''''''''''''''''''''''''-->
    <string name="search">Aramaya Başla</string>
    <string name="news">Yeni</string>
    <string name="cargo_free">Kargo Ücretsiz</string>
    <string name="cargo_not_free">Ücretli Kargo</string>


    <!--''''''''''''''''''''HOME''''''''''''''''''''''''''''''''''-->


    <!--''''''''''''''''''''ITEM''''''''''''''''''''''''''''''''''-->
    <string name="cargo">Kargo Ücretsiz</string>

    <!--''''''''''''''''''''ITEM''''''''''''''''''''''''''''''''''-->


    <!--''''''''''''''''''''CATEGORY''''''''''''''''''''''''''''''-->
    <string name="category">Kategoriler</string>
    <string name="product_not_found">Aradığınız Ürünü Bulamadık..</string>

    <!--''''''''''''''''''''CATEGORY''''''''''''''''''''''''''''''-->


    <!--''''''''''''''''''''FAVORİE''''''''''''''''''''''''''''''-->
    <string name="favorie">Favorilerim</string>
    <string name="detailButton">Detay</string>
    <string name="buyButton">Satın AL</string>

    <!--''''''''''''''''''''FAVORİE''''''''''''''''''''''''''''''-->


    <!--''''''''''''''''''''CATEGORY''''''''''''''''''''''''''''''-->
    <string name="color">Renk</string>
    <string name="product_color">Ürün Renkleri</string>
    <string name="product_firs">Ürün Fırsatları</string>
    <string name="product_size">Uyumlu Bedenler</string>
    <string name="product_detail">Ürün Açıklaması</string>
    <string name="similar">Benzer Ürünler</string>

    <!--''''''''''''''''''''CATEGORY''''''''''''''''''''''''''''''-->


    <!--''''''''''''''''''''SHOP''''''''''''''''''''''''''''''''''-->
    <string name="shop">Alışveriş</string>

    <string name="shop_bar_eft">EFT/Havale</string>
    <string name="shop_bar_social">Sosyal Medya</string>


    <string name="how_to_use">Bir Ürünü Nasıl Satın Alırım?</string>

    <string name="desc_button">Bir üründe SATIN AL butonuna tıklayın.</string>
    <string name="desc_wp">Gönder butonuna tıklamanız yeterlidir.</string>
    <string name="desc_pay">Onay aldıktan sonra ödemeyi yapabilirsiniz.</string>
    <string name="desc_sheet">Dekont ve Kargo bilgileri bize gönderin.</string>
    <string name="desc_ok">Satın alma tamamdır. Ürününüz Hazırlanıyor.</string>

    <string name="acc_detail">Banka Hesap Bilgileri</string>
    <string name="in_touch">WhatsApp İletişim Numarası</string>

    <string name="bank">Banka Ödeme Bilgileri</string>
    <string name="b_name">Banka Adı</string>
    <string name="b_acc_pers">Hesap Kullanıcısı</string>
    <string name="b_iban">İban No</string>

    <string name="acc_social_detail">Sosyal Medya Bilgilerimiz</string>
    <string name="instagramAccount">İnstagram Hesabımız</string>
    <string name="dolapAccount">Dolap Hesabımız</string>

    <string name="eft_desc">EFT / Havale İle Alışveriş</string>
    <string name="copytext">Kopyala</string>

    <!--''''''''''''''''''''SHOP''''''''''''''''''''''''''''''''''-->


    <!--''''''''''''''''''''NOTİFİCATİONS''''''''''''''''''''''''''-->
    <string name="notification">Bildirimler</string>

    <!--''''''''''''''''''''NOTİFİCATİONS''''''''''''''''''''''''''-->


    <!--''''''''''''''''''''DETAİL''''''''''''''''''''''''''-->
    <string name="tl">₺</string>
    <string name="newtext">Yeni Ürün</string>
    <string name="saved_hata">Bu ürün beğenilirken hataya düştü.</string>
    <string name="shimmer1">        </string>
    <string name="shimmer2">             </string>
    <string name="shimmer3">                      </string>
    <!--''''''''''''''''''''DETAİL''''''''''''''''''''''''''-->

    <!--''''''''''''''''''''Panel''''''''''''''''''''''''''''''''''-->
    <string name="panel">Panel Şifrenizi Giriniz</string>
    <string name="panel_sifre">Tr80gs055.</string>
    <string name="yetkisiz">Yetkisiz Giriş!</string>
    <string name="bos_urun">Boş Ürün Gönderemezsin!</string>
    <string name="success">Ürün Başarı İle Kaydedildi!</string>
    <string name="yetkili">Yetki Tamamdır</string>
    <string name="panel_button_send">Gönder</string>
    <string name="panel_button_create">Ürün Ekle</string>
    <string name="panel_button_delete">Ürün Sil</string>
    <string name="panel_button_update">Ürün Güncelle</string>

    <string name="add_id">ürün id - Int</string>
    <string name="add_isim">ürün ismi - String</string>
    <string name="add_aciklama">ürün açıklaması - String</string>
    <string name="add_image">image - String</string>
    <string name="add_gecerliFiyat">şuanki fiyat - String</string>
    <string name="add_oncekiFiyat">önceki fiyat - String</string>
    <string name="add_indirimAciklama">indirim Aciklaması - String</string>
    <string name="add_kategori">kategori - String</string>
    <string name="add_numara">beden - String</string>
    <string name="add_renk">rengi - String</string>
    <string name="uyumluBedenler">uyumlu Bedenler - String (,)</string>
    <string name="add_satilanAdet">satilan Adet - Int</string>
    <string name="add_ilgiliUrunId">benzer ürünler - String (,)</string>
    <string name="add_hastags">hastags - String</string>
    <string name="add_isAktif">aktif mi - Int (0,1)</string>
    <string name="add_isKargoUcret">kargo free mi - Int (0,1)</string>
    <string name="add_isUreticiSecimi">üretici seçimi - Int (0,1)</string>
    <string name="add_isYeni">yeni mi - Int (0,1)</string>
    <!--''''''''''''''''''''Panel''''''''''''''''''''''''''''''''''-->


</resources>