<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.shop.ShopFragment">

    <include
        android:id="@+id/toolBar"
        layout="@layout/custom_toolbar" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/category_search_back"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/inter_semibold"
            android:singleLine="true"
            android:text="@string/desc"
            android:textColor="@color/dark_purple"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/inter"
            android:singleLine="true"
            android:textColor="@color/dark_purple"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/category_search_back"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="12dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/acc_detail"
            android:textColor="@color/dark_purple_50_trans"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/inter_semibold"
                android:singleLine="true"
                android:text="İsim Soyisim"
                android:textColor="@color/dark_purple"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/isimSoyisim"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/inter"
                android:singleLine="true"
                android:textColor="@color/dark_purple"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/inter_semibold"
                android:singleLine="true"
                android:text="İletişim"
                android:textColor="@color/dark_purple"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/iletisim"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/inter"
                android:singleLine="true"
                android:textColor="@color/dark_purple"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/category_search_back"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="12dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/acc_social_detail"
            android:textColor="@color/dark_purple_50_trans"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/inter_semibold"
                android:singleLine="true"
                android:text="@string/instagramAccount"
                android:textColor="@color/dark_purple"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/inter"
                android:singleLine="true"
                android:textColor="@color/dark_purple"
                android:textSize="16sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/inter_semibold"
                android:singleLine="true"
                android:text="@string/dolapAccount"
                android:textColor="@color/dark_purple"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/inter"
                android:singleLine="true"
                android:textColor="@color/dark_purple"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>