<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/item_food_category_back"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginStart="12dp"
    android:layout_marginTop="6dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="6dp"
    android:background="@drawable/product_item_background"
    android:elevation="2dp"
    android:gravity="center"
    android:orientation="horizontal">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="144dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:background="@drawable/dene"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/rounded20" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter_semibold"
                android:singleLine="true"
                android:textColor="@color/normal_text"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/productImage"
                android:text="Ürün Adı Burda" />


            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:layout_weight="0"
                android:background="@drawable/ic_notification"
                android:contentDescription="@string/app_name" />

        </LinearLayout>


        <TextView
            android:id="@+id/productDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/inter_semibold"
            android:singleLine="true"
            android:textColor="@color/not_selected"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productImage"
            android:text="Ürün Acıklaması Burada Olacak" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/indirimLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/product_item_cargo_background"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@+id/productCurrentPrice"
                app:layout_constraintTop_toBottomOf="@+id/productCurrentPrice">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/product_item_discound_ticket"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/indirimYuzde"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:textColor="@color/light_purple"
                    android:textSize="11sp"
                    android:text="-%50" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@+id/indirimLayout"
                app:layout_constraintTop_toBottomOf="@+id/productCurrentPrice">


                <TextView
                    android:id="@+id/productOldPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/inter_light"
                    android:singleLine="true"
                    android:textColor="@color/black_50_trans"
                    android:textSize="14sp"
                    android:text="120.00₺" />

                <TextView
                    android:id="@+id/productCurrentPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/inter_semibold"
                    android:singleLine="true"
                    android:textColor="@color/dark_purple"
                    android:textSize="16sp"
                    android:text="120.00₺" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/productSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/favori_size_back"
            android:fontFamily="@font/inter_light"
            android:gravity="center"
            android:padding="5dp"
            android:singleLine="true"
            android:textColor="@color/black_50_trans"
            android:textSize="12sp"
            android:text="36-42 Numara" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/indirimLayout"
            app:layout_constraintTop_toBottomOf="@+id/productCurrentPrice">

            <Button
                android:id="@+id/productDetailButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/light_purple"
                android:fontFamily="@font/inter"
                android:singleLine="true"
                android:textColor="@color/dark_purple"
                android:textSize="12sp"
                android:text="@string/detailButton" />


            <Button
                android:id="@+id/productBuyButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dark_purple"
                android:fontFamily="@font/inter"
                android:singleLine="true"
                android:textColor="@color/theme"
                android:textSize="12sp"
                android:text="@string/buyButton" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>